--- a/TODO.txt
+++ b/TODO.txt
@@ -4,4 +4,4 @@ modify log capability to split keyboard input by window title+id
 
 create a log parser, to parse in the non-printing characters (such as arrow keys and backspace/delete), to make log easier to read
 
-enable passing options via commandline, in preparation for exe freeze
+DONE: enable passing options via commandline, in preparation for exe freeze
