--- a/TODO.txt
+++ b/TODO.txt
@@ -1,7 +1,3 @@
-TODO
-
-modify log capability to split keyboard input by window title+id
-
-create a log parser, to parse in the non-printing characters (such as arrow keys and backspace/delete), to make log easier to read
-
-DONE: enable passing options via commandline, in preparation for exe freeze
+See the project website: 
+http://pykeylogger.sourceforge.net/ 
+for planned features of pykeylogger. it is updated frequently.
