added changes for 0.6.4

--- a/CHANGELOG.TXT
+++ b/CHANGELOG.TXT
@@ -2,6 +2,12 @@ PyKeylogger Changelog
 ---------------------
 
 -----
+Version 0.6.4 (2005-10-03)
+
+*) Really fixed the long filename bug now (it turns out the fix from 0.6.0 didn't really work...)
+*) Fix up handling of various exceptions that could be thrown as a result of various filesystem operations. Should make pykeylogger play nicer.
+
+-----
 Version 0.6.3 (2005-09-30)
 
 *) Optimized regexp matching. Not much of a difference, but why not. :)
