--- a/CHANGELOG.TXT
+++ b/CHANGELOG.TXT
@@ -2,6 +2,18 @@ PyKeylogger Changelog
 ---------------------
 
 -----
+Version 0.8.0 (2006-08-04)
+
+*) Fixed setup.py so that it automatically adds data files to the distribution when making the executable.
+*) Added graphical control panel that allows changing all configuration items, as well as taking various actions manually.
+*) Using the more powerful ConfigObj module to read configuration file, instead of ConfigParser. This allows preservation of the .ini file order and comments when changing things through the GUI, as well as validation of option values.
+*) Added the highly informative "welcome screen"
+*) The passwords are now not stored in cleartext in the .ini file, to provide some security against casual snooping.
+*) Add capability to zip logfiles to zip and delete the .txts, to save disk space, separately from the send email option.
+*) Removed the "flush key" feature since it is now twice obsoleted - there is the automatic flush, and there is the capability to flush through the control panel.
+*) Protected access to the conntrol panel with a "master password". Default password is left blank; you can change it in the control panel.
+
+-----
 Version 0.7.0 (2006-07-19)
 
 *) Fixed bug where error output was not properly translated to string (cf. http://sourceforge.net/forum/forum.php?thread_id=1418377&forum_id=493189)
