--- a/CHANGELOG.TXT
+++ b/CHANGELOG.TXT
@@ -2,6 +2,11 @@ PyKeylogger Changelog
 ---------------------
 
 -----
+Version 0.8.2 (2007-08-20)
+
+*) Fixed bug 1772375, which prevented the logging of keys to multiple files when window title contained non-ascii characters.
+
+-----
 Version 0.8.1 (2007-01-10)
 
 *) Improved password obfuscation in the .ini file so that it doesn't cause hiccups for the config file reader.
