--- a/CHANGELOG.TXT
+++ b/CHANGELOG.TXT
@@ -6,7 +6,7 @@ Version 0.9.0 (2007-10-24)
 
 *) Add feature to allow key combos to be used as the control key. Makes it easier to avoid accidental hits.
 *) Write output to a delimited file (customizable delimiter). This supercedes the previous separate features of "one file" logging and "multifile" logging. Now the logs can be easily seen, filtered, and manipulated after being imported into a spreadsheet or database software of your choice.
-*) Log also the current username
+*) Log also the current username (useful for logging on shared systems)
 *) Instead of parsing events directly in the hook function, add them to a processing queue. This should reduce the occurrence of lag, since the actual hooking operation becomes extremely fast.
 *) Add automatic log rotation feature
 
