--- a/CHANGELOG.TXT
+++ b/CHANGELOG.TXT
@@ -2,6 +2,13 @@ PyKeylogger Changelog
 ---------------------
 
 -----
+Version 0.9.3 (2008-03-01)
+
+*) Fix bug (reported by email) where control key hash would not be reset after a call to control panel, thus causing the panel to reappear subsequently on every key press. (Could have been a Windows-Vista-only problem, since I could not reproduce this locally.)
+*) Point the links in the support screen to the newly-established wikispaces wiki (to migrate off the old mediawiki pages).
+*) Change support screen backgrounds to white for prettiness and portability.
+
+-----
 Version 0.9.2 (2008-02-08)
 
 *) Add option to log number of keys pressed per log data line
