--- a/CHANGELOG.TXT
+++ b/CHANGELOG.TXT
@@ -2,18 +2,25 @@ PyKeylogger Changelog
 ---------------------
 
 -----
+Version 1.0.2 (2008-03-21)
+
+*) Add some pretty graphics to the main control panel window.
+*) Add icons to the frozen windows executables.
+*) Make click-image format and quality (for jpg only) configurable through the control panel.
+
+-----
 Version 1.0.1 (2008-03-19)
 
 *) Bugfix: now we properly detect the location of the program, so that relative log directories and ini/val file locations work properly. Before we relied on current directory being right, which is not always true.
 *) Do some pre-processing on settings read from ini file, to make sure directories and filenames are 'legal'. 
-*) Prettify the about dialog
+*) Prettify the about dialog.
 
 -----
 Version 1.0.0 (2008-03-11)
 
 *) Big news: thanks to a generous contributor (Tim Alexander), PyKeylogger now works on linux, with complete feature parity between the windows and linux versions.
 *) New feature: PyKeylogger can now capture screenshots cropped around mouse clicks.
-*) A few minor improvements/bugfixes and some code refactoring happened in the process of making the code cross-platform
+*) A few minor improvements/bugfixes and some code refactoring happened in the process of making the code cross-platform.
 
 -----
 Version 0.9.4 (2008-03-04)
